Add Uranium market intelligence chamber
